--- a/styles/style.css
+++ b/styles/style.css
@@ -81,6 +81,8 @@ text-decoration: none;
  padding-left: 50px;
  padding-right: 50px;
  padding-bottom: 50px;
+ display: flex;
+ flex-direction: column;
 }
 
 .overlay {
@@ -201,7 +203,7 @@ text-decoration: none;
   background-position: center;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-start;
 }
 
 .card::before {
@@ -243,6 +245,7 @@ text-decoration: none;
   font-size: 20px;
   line-height: 24px;
   margin: 0;
+  margin-top: auto;
 }
 
 /* ===== ссылка ===== */
@@ -305,9 +308,13 @@ width: 148px;
 
 .footer {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr min-content 240px;
   padding: 180px 50px 90px;
   align-items: start;
+}
+
+.footer__menu {
+  justify-self: center;
 }
 
 .footer__address {
@@ -333,11 +340,12 @@ width: 148px;
 }
 
 .footer__social-list {
+  justify-self: end;
   list-style: none;
   padding: 0;
   margin: 0;
   display: flex;
-  justify-content: flex-end;
+  justify-self: flex-end;
   gap: 48px;
 }
 
