--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,3 @@
-.page {
- max-width: 1100px;
- margin: 0 auto;
-}
-
 /* шапка */
 
 .header {
@@ -185,7 +180,7 @@ text-decoration: none;
 
 .lots__card-list {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);;
+  grid-template-columns: repeat(3, 1fr);
   gap: 25px;
   list-style: none;
   margin: 0 0 30px;
@@ -306,7 +301,7 @@ width: 148px;
   font-family: 'Raleway', Arial, sans-serif;
   font-size: 40px;
   text-transform: uppercase;
-  margin-bottom: 100px 0 100px;
+  margin: 100px 0 100px;
 }
 
 .about__text {
